# Chatoyant

./: Chatoyant Example.ipynb  Chatoyant.py  Chatoyant_colors.py  Chatoyant_env.yml  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package-conda.yml
src/: Chatoyant Example.ipynb
tests/: test_Chatoyant.py
